--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,6 +11,9 @@
                 Not Published</b>
             </div>
         {% endif %}
+        {% if user.is_authenticated %}
+        	<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.test|linebreaksbr }}</p>
     </div>
